<resources>
    <string name="app_name">Moonice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">666</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="menu_books">Books</string>
    <string name="moonice">moonice</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="prompt_email">Email</string>
    <string name="log_out">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">loading</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="emptyDate">--/--/----</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth_date">Birth Date</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preferences">Preferences</string>
    <string name="new_password">New Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="LEON">11037</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="throne_of_glass">Throne of glass</string>
    <string name="bookmark">Bookmark</string>
    <string name="save">Save</string>
    <string name="default_birth_date">07/09/2001</string>
    <string name="moonice_user_gmail_com">moonice_user@gmail.com</string>
    <string name="moonice_user">Moonice_User</string>
    <string name="upload_image">Upload Image</string>
    <string name="remember_password">Remember Password</string>
    <string name="moonice_logo">Moonice Logo</string>
    <string name="send">Send</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="ch_1_mystical_dream">Ch.1 Mystical Dream</string>
    <string name="disk">Disk</string>
    <string name="book_cover">Book Cover</string>
    <string name="previous_chapter_control">Previous Chapter Control</string>
    <string name="five_seconds_ago_control">Five Seconds Ago Control</string>
    <string name="play_stop_control">Play Stop Control</string>
    <string name="five_sec_forward_control">Five Sec Forward Control</string>
    <string name="next_chapter_control">Next Chapter Control</string>
    <string name="current_time_record">0:00</string>
    <string name="end_time_record">59:59</string>
    <string name="share">Share</string>
    <string name="registration">Registration</string>
    <string name="moon">Moon</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="popular_books">Popular Books</string>
    <string name="top_comedy">Top Comedy</string>
    <string name="top_drama">Top Drama</string>
    <string name="top_fantasy">Top Fantasy</string>
    <string name="top_romance">Top Romance</string>
    <string name="drama">Drama</string>
    <string name="sarah_j_maas_2018">Sarah J. Maas, 2018</string>
    <string name="play_chapter_icon">Play Chapter Icon</string>
    <string name="star_divider">Star Divider</string>
    <string name="time_record">59h 59m 59s</string>
    <string name="ch_1">1</string>
    <string name="mystical_dream">Mystical dream</string>
    <string name="description">Description</string>
    <string name="description_throne_of_glass">Throne of Glass follows Celaena Sardothien, a 18-year-old assassin in the Kingdom of Adarlan. After a year of suffering for her crimes in a slave camp called Endovier, she accepts the offer of Crown Prince Dorian, the King of Adarlan\'s son, to compete with other assassins.</string>
    <string name="genre">Genre</string>
    <string name="user_avatar">User Avatar</string>
    <string name="lost_internet_connection">Lost internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="search">Search</string>
</resources>