<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bookmark_icon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView style="@style/ItemBookCoverCardStyle">

        <ImageButton
            android:contentDescription="@string/book_cover"
            android:id="@+id/bookmark_image_logo"
            style="@style/ItemBookCoverButtonStyle"
            android:src="@drawable/book_item_2" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookmark_item_title"
            style="@style/ItemBookTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/throne_of_glass" />

        <TextView
            android:id="@+id/bookmark_item_publish_data"
            style="@style/ItemBookSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sarah_j_maas_2018" />

        <TextView
            android:id="@+id/bookmark_item_chapter_data"
            style="@style/ItemBookChapterTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch_1_mystical_dream" />

    </LinearLayout>

</LinearLayout>