<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_books">

    <fragment
        android:id="@+id/nav_books"
        android:name="com.nulp.moonice.fragment.main_ui.books.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.nulp.moonice.fragment.main_ui.bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

<!--    <fragment-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:name="com.nulp.moonice.fragment.main_ui.settings.SettingsFragment"-->
<!--        android:label="@string/menu_settings"-->
<!--        tools:layout="@layout/fragment_settings"-->
<!--        />-->

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nulp.moonice.fragment.main_ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"
        />

</navigation>