<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registrationContainer"
    style="@style/AuthorizationLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".authorization.register.RegistrationActivity">

    <TextView
        android:id="@+id/registrationTextView"
        style="@style/LogoTitle"
        android:layout_marginVertical="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditText"
                        android:id="@+id/username_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/EditText"
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditText"
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditText"
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="20dp"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/confirm_password_layout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"

                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:startIconDrawable="@drawable/ic_calendar"
                    android:id="@+id/birth_date_button"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:id="@+id/birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birth_date"
                        android:inputType="date"
                        android:text="@string/emptyDate"
                        android:editable="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/purple_blue"
                    android:paddingHorizontal="60dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/indigo"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/back_to_login"
                    style="@style/AuthorizationSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>